--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Portofolio Arisman Jusman</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script>
     if (localStorage.getItem('theme') === 'dark') {
       document.documentElement.classList.add('dark');
@@ -31,8 +32,19 @@
       if (saved) document.getElementById(id).innerText = saved;
     }
 
+    function showWelcomePopup() {
+      const popup = document.getElementById('welcomePopup');
+      popup.classList.remove('opacity-0', 'pointer-events-none');
+      popup.classList.add('opacity-100');
+      setTimeout(() => {
+        popup.classList.add('opacity-0', 'pointer-events-none');
+        popup.classList.remove('opacity-100');
+      }, 3500);
+    }
+
     window.onload = function () {
       ['name', 'bio1', 'bio2'].forEach(loadContent);
+      showWelcomePopup();
     }
   </script>
   <style>
@@ -41,7 +53,12 @@
     }
   </style>
 </head>
-<body class="bg-gradient-to-br from-gray-100 to-blue-100 dark:from-gray-900 dark:to-gray-800 text-gray-800 dark:text-gray-100">
+<body class="bg-gradient-to-br from-fuchsia-100 via-sky-100 to-emerald-100 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 text-gray-800 dark:text-gray-100 transition-all duration-700">
+
+  <!-- Pop-up Animation -->
+  <div id="welcomePopup" class="fixed top-10 left-1/2 transform -translate-x-1/2 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-100 px-6 py-3 rounded-xl shadow-xl opacity-0 pointer-events-none transition-opacity duration-700 z-50">
+    Selamat datang di portofolio Arisman! 🚀
+  </div>
 
   <!-- Dark Mode Toggle -->
   <div class="fixed top-4 right-4 z-50">
@@ -52,25 +69,37 @@
 
   <!-- Hero Section -->
   <main class="min-h-screen flex items-center justify-center p-6">
-    <div class="text-center max-w-2xl bg-white dark:bg-gray-800 bg-opacity-80 dark:bg-opacity-60 backdrop-blur-md p-10 rounded-3xl shadow-xl">
+    <div class="text-center max-w-2xl bg-white dark:bg-gray-800 bg-opacity-80 dark:bg-opacity-60 backdrop-blur-md p-10 rounded-3xl shadow-2xl animate-fade-in">
       <div class="mb-6">
-        <img src="https://img.icons8.com/fluency/96/user-male-circle.png" class="mx-auto rounded-full" alt="Avatar">
+        <img src="https://img.icons8.com/fluency/96/user-male-circle.png" class="mx-auto rounded-full animate-bounce" alt="Avatar">
       </div>
-      <h1 id="name" contenteditable="true" oninput="saveContent('name')" class="text-4xl font-bold mb-4">Arisman Jusman</h1>
-      <p id="bio1" contenteditable="true" oninput="saveContent('bio1')" class="text-lg mb-2">Mahasiswa Sastra Inggris Universitas Halu Oleo</p>
-      <p id="bio2" contenteditable="true" oninput="saveContent('bio2')" class="text-lg mb-6">Sedang belajar menjadi Web Developer</p>
+      <h1 id="name" contenteditable="true" oninput="saveContent('name')" class="text-4xl font-extrabold mb-4 text-indigo-600 dark:text-indigo-300">Arisman Jusman</h1>
+      <p id="bio1" contenteditable="true" oninput="saveContent('bio1')" class="text-lg mb-2 text-gray-700 dark:text-gray-300">Mahasiswa Sastra Inggris Universitas Halu Oleo</p>
+      <p id="bio2" contenteditable="true" oninput="saveContent('bio2')" class="text-lg mb-6 text-gray-700 dark:text-gray-300">Sedang belajar menjadi Web Developer</p>
       <nav class="flex justify-center space-x-6">
-        <a href="projects.html" class="text-blue-600 dark:text-blue-300 hover:underline font-medium">Projek</a>
-        <a href="gallery.html" class="text-blue-600 dark:text-blue-300 hover:underline font-medium">Galeri</a>
-        <a href="contact.html" class="text-blue-600 dark:text-blue-300 hover:underline font-medium">Kontak</a>
+        <a href="projects.html" class="text-teal-600 dark:text-teal-300 hover:underline font-medium hover:scale-110 transition">Projek</a>
+        <a href="gallery.html" class="text-pink-600 dark:text-pink-300 hover:underline font-medium hover:scale-110 transition">Galeri</a>
+        <a href="contact.html" class="text-violet-600 dark:text-violet-300 hover:underline font-medium hover:scale-110 transition">Kontak</a>
       </nav>
     </div>
   </main>
 
   <!-- Footer -->
-  <footer class="text-center bg-gray-800 dark:bg-gray-950 text-white p-4">
+  <footer class="text-center bg-gradient-to-r from-gray-800 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 text-white p-4 animate-fade-in">
     &copy; 2025 Lunar🌙. Mahasiswa Sastra Inggris UHO 2020.
   </footer>
+
+  <!-- Animations -->
+  <style>
+    .animate-fade-in {
+      animation: fadeIn 1.2s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(10px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 
 </body>
 </html>
